ocp/ocp-deploymentconfig-simplehttpd.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  app: simplehttpd
  name: simplehttpd
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        deploymentconfig: simplehttpd
    spec:
      containers:
      - image: httpd:latest
        name: simplehttpd
        command: [ "/bin/sh", "-c", "while true ; do date; sleep 1; done;" ]
  triggers:
  - type: ConfigChange
---
apiVersion: v1
kind: Service
metadata:
  labels:
  app: simplehttpd
  name: simplehttpd
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: simplehttpd
    deploymentconfig: simplehttpd
---
