ocp/ocp-service-pythonex.yaml
apiVersion: v1
kind: Service
metadata:
  app: pythonex
  name: pythonex
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pythonex
    deploymentconfig: pythonex
  type: LoadBalancer
