ocp/ocp-service-tmp.yaml
apiVersion: v1
kind: Service
metadata:
  name: pythonex
  namespace: myproject
spec:
  selector:
    app: pythonex
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
