ocp/ocp-route-encryption.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pythonex-3-git
spec:
  to:
    kind: Service
    name: pythonex-3-git
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
