ocp/ocp-route-tmp.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example
  namespace: myproject
spec:
  path: /
  to:
    kind: Service
    name: example
  port:
    targetPort: 80
